# tree-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  hk.pkl  mise.toml  release-plz.toml
.github/: dependabot.yml
.github/homebrew/: tree-tui.rb
.github/workflows/: ci.yml  release-plz.yml
docs/: ARCHITECTURE.md
scripts/: gen-svg.sh
src/: action.rs  app.rs  batch.rs  cli.rs  clipboard.rs  editor.rs  error.rs  event.rs  launch.rs  logging.rs  main.rs  pager.rs  scan.rs  tui.rs  version.rs  watch.rs
src/collect/: code.rs  git.rs  mod.rs  walk.rs
src/model/: build.rs  lens.rs  mod.rs  node.rs  view.rs
src/ui/: codeview.rs  detail.rs  footer.rs  header.rs  help.rs  loading.rs  mod.rs  preview.rs  reader.rs  syntax.rs  theme.rs  tree_view.rs
