[package]
name = "tree-tui"
version = "0.1.0"
edition = "2024"

# The binary is invoked as `tree <dir>` (note: shadows the system `tree` once installed).
[[bin]]
name = "tree"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29", features = ["event-stream"] }
eyre = "0.6.12"
futures = "0.3"
ratatui = "0.30.1"
thiserror = "2.0.18"
tokei = { version = "14", default-features = false }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2.2"

# A tidy, self-contained binary for `mise run install`.
[profile.release]
lto = true
strip = true
codegen-units = 1
